Fix for FDX timeslot display in expressco not scrolling when a day has a lot slots/cutoffs
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@37475 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/timeslots.css
+++ b/projects/Media/docroot/assets/css/timeslots.css
@@ -1043,3 +1043,6 @@ td.noTopBorder {
     text-decoration:none;
     color: #ccc;
 }
+[data-component="timeselectorcontent"] {
+	overflow: auto;
+}
